feat(quiz) Added quiz & results page

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,6 +1,8 @@
 
 .restaurant-card {
 
+  @extend .card;
+
   .body {
     background-color: rgba(0, 0, 0, 0.03) !important;
 
@@ -36,8 +38,4 @@
     }
   }
   
-  
-
 }
-
-
