--- a/src/styles/results.scss
+++ b/src/styles/results.scss
@@ -1,54 +1,16 @@
-result-view  {
+quiz-answer {
 
-  &::part(card) { 
-    @extend .card;
-    
-    margin: 1rem;
-    @include media-breakpoint-between(xs, sm) { width: 100%   }  
-    @include media-breakpoint-down(md) { width: 70% }  
-    @include media-breakpoint-down(lg) { width: 80% }    
-    @include media-breakpoint-down(xl) { width: 40% }    
+  &::part(title) { 
 
-  }  
-
-  &::part(title) {
-
-    @extend .card-title;
     @include media-breakpoint-between(xs, md) {
-      font-size: 3rem;
-    }   
-    
-    @include media-breakpoint-down(xl) {
-      font-size: 1.5rem;
-    }     
-  }  
+      font-size: 1.2rem;
+      line-height: 1.4rem;
+    }
 
-  &::part(body) {
-    @extend .card-body;    
   }
 
-  &::part(button) {
-    @extend .btn;
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+  .alert {
+    margin-top: 1rem;
   }
-
-  &::part(content) {
-    @extend .card-text;   
-
-    margin-top: 0;
-  
-    @include media-breakpoint-between(xs, md) {
-      font-size: 2rem;
-    }   
-    
-    @include media-breakpoint-down(xl) {
-      font-size: 1rem;
-    }     
-  }
-
 
 }
-
-
